--- a/startup_LP/index.html
+++ b/startup_LP/index.html
@@ -2,6 +2,10 @@
 <html>
   <head>
     <title>Startup</title>
+     <!-- Required meta tags -->
+     <meta charset="utf-8">
+     <meta name="viewport" content="width=device-width, initial-scale=1">
+ 
 
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
@@ -14,6 +18,7 @@
     <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
-
+    <h1><strong>The Biggest Startup event of the year!</strong></h1>
+    <button>Find out more</button>
   </body>
 </html>
