--- a/startup_LP/index.html
+++ b/startup_LP/index.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
-    <h1><strong>The Biggest Startup event of the year!</strong></h1>
-    <button>Find out more</button>
+    <h1 class="text-uppercase"><strong>The Biggest Startup event of the year!</strong></h1>
+    <button class="btn btn-primary btn-xl">Find out more</button>
   </body>
 </html>
