--- a/startup_LP/index.html
+++ b/startup_LP/index.html
@@ -18,7 +18,16 @@
     <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
-    <h1 class="text-uppercase"><strong>The Biggest Startup event of the year!</strong></h1>
-    <button class="btn btn-primary btn-xl">Find out more</button>
+    <div class="container">
+      <div class="row">
+          <header class="text-center col-12">
+            <h1 class="text-uppercase"><strong>The Biggest Startup event of the year!</strong></h1>
+          </header>
+          <section class= "text-center col-12">
+            <center><hr></center>
+            <button class="btn btn-primary btn-xl">Find out more</button>
+          </section>
+      </div>
+    </div>
   </body>
 </html>
