--- a/startup_LP/index.html
+++ b/startup_LP/index.html
@@ -23,10 +23,11 @@
           <header class="text-center col-12">
             <h1 class="text-uppercase"><strong>The Biggest Startup event of the year!</strong></h1>
           </header>
-          <section class= "text-center col-12">
-            <center><hr></center>
-            <button class="btn btn-primary btn-xl">Find out more</button>
-          </section>
+          <div class="buffer col-12"></div>
+            <section class= "text-center col-12">
+              <center><hr></center>
+              <button class="btn btn-primary btn-xl">Find out more</button>
+            </section>
       </div>
     </div>
   </body>
