--- a/startup_LP/index.html
+++ b/startup_LP/index.html
@@ -26,7 +26,8 @@
           <div class="buffer col-12"></div>
             <section class= "text-center col-12">
               <center><hr></center>
-              <button class="btn btn-primary btn-xl">Find out more</button>
+              <a href="https://mailchi.mp/252a4965f7d5/startup"><button class="btn btn-primary btn-xl">Find out more</button>
+              </a>
             </section>
       </div>
     </div>
