js arrays more like python lists

--- a/keyless car/index.html
+++ b/keyless car/index.html
@@ -6,6 +6,6 @@
 </head>
 <body>
     <h1>JAVASCRIPT</h1>
-    <script type="text/javascript" src="exx.js"></script>
+    <script type="text/javascript" src="arrays.js"></script>
 </body>
 </html>
